# applyos-share

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  analyze.py  cli.py  config.py  crm.py  ingest.py  letter.py  llm.py  match.py  pipeline.py  profile.py  render_data.py  revise.py  schemas.py  tailor.py  validate.py
app/prompts/: analyze.md  letter.md  match.md  plan.md  revise.md
app/web/: __init__.py  server.py
app/web/static/: app.css  app.js  index.html
docs/: 01-research.md  02-architecture.md  03-roadmap.md  04-design-system.md  PROFIL_ERSTELLEN.md
profile/: profile.example.yaml
scripts/: setup.sh
templates/typst/: cv.typ  example.typ  letter.typ  style.typ
tests/: record_snapshots.py  test_cli_smoke.py  test_crm.py  test_golden_compile.py  test_ingest.py  test_llm_layer.py  test_llm_live.py  test_pipeline.py  test_pipeline_schemas.py  test_profile_schema.py  test_scaffold.py  test_snapshots.py  test_validate.py  test_web.py
tests/fixtures/postings/: README.md  example-posting.html
tests/fixtures/snapshots/: example-posting.analysis.json  example-posting.cv_data.json  example-posting.letter_data.json  example-posting.plan.json  example-posting.slots.json
