[project]
name = "applyos"
version = "0.1.0"
description = "Personal job application engine: tailored CV + cover letter PDFs, local CRM"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "pydantic>=2.7",
    "pypdf>=6.14.2",
    "pyyaml>=6.0",
    "trafilatura>=2.1.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
applyos = "app.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# live LLM tests are excluded by default; run them with: uv run pytest -m llm
addopts = "-q -m 'not llm'"
markers = ["llm: makes live Anthropic API calls (needs ANTHROPIC_API_KEY)"]
pythonpath = ["."]
